--- a/prepros.config
+++ b/prepros.config
@@ -927,6 +927,12 @@
     },
     "files": [
       {
+        "file": "scss/mixins.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "scss/style.scss",
         "config": {
           "tasks": {
@@ -934,6 +940,12 @@
               "enable": true
             }
           }
+        }
+      },
+      {
+        "file": "scss/variables.scss",
+        "config": {
+          "autoCompile": false
         }
       }
     ]
